# cool_the_globe

./: Dockerfile  pyproject.toml  template.py
.github/workflows/: render.yml
app/: README.md  main.py
app/routes/: contact.py  greengauge.py  homepage.py  insights.py
app/static/css/: styles.css
app/static/js/: fireworks.js
app/static/sheets/: mission_climate_cues.csv
app/templates/: contact.html  greengauge.html  greengauge_result.html  index.html  insights.html
