[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Krunal Shambharkar <krunalss@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
jinja2 = "^3.1.2"
pandas = "2.2.3"
python-multipart = "^0.0.5"
matplotlib ="3.9.2"
plotly = "^5.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"